# xhelio-pds

./: CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-03-09-pdsmcp-design.md  2026-03-09-pdsmcp-plan.md  2026-03-10-schema-validation-plan.md
docs/specs/: 2026-03-10-schema-validation-design.md
src/pdsmcp/: __init__.py  __main__.py  cache.py  config.py  fetch.py  http.py  label_parser.py  metadata.py  prompts.py  server.py  validation.py
src/pdsmcp/data/metadata/: pds3_CO-E_J_S_SW-CAPS-5-DDR-ELE-MOMENTS-V1.0_DATA.json  pds3_CO-E_SW_J_S-MAG-3-RDR-FULL-RES-V2.0_DATA.json  pds3_CO-E_SW_J_S-MAG-4-SUMM-1MINAVG-V2.1_DATA.json  pds3_CO-SS_S-RPWS-3-LPCNTCUR-V1.0_DATA.json  pds3_CO-SS_S-RPWS-5-LPSWEEP-V1.0_DATA.json  pds3_CO-SS_S-RPWS-5-NEPROXY-V1.0_DATA.json  pds3_GO-A-MAG-3-RDR-GASPRA-HIGH-RES-V1.0.json  pds3_GO-A-MAG-3-RDR-IDA-HIGH-RES-V1.0.json  pds3_GO-A-MAG-4-SUMM-IDA-SUMMARY-V1.0.json  pds3_GO-A-PLS-4-SUMM-IET-V1.0.json  pds3_GO-A-POS-6-GASPRA-FLYBY-TRAJ-V1.0.json  pds3_GO-A-POS-6-IDA-FLYBY-TRAJ-V1.0.json  pds3_GO-J-HIC-2-EDR-RAW-V1.0.json  pds3_GO-J-POS-6-REDR-ROTOR-ATTITUDE-V1.0.json  pds3_GO-J-POS-6-SC-TRAJ-JUP-COORDS-V1.0.json  pds3_GO-J-POS-6-SC-TRAJ-MOON-COORDS-V1.0.json  pds3_GO-SS-MAG-4-SUMM-CRUISE-RTN-V1.0.json  pds3_GO-V-MAG-3-RDR-VENUS-HIGH-RES-V1.0.json  pds3_GO-V-MAG-4-SUMM-VENUS-SUMMARY-V1.0.json  pds3_GO-V-POS-6-VENUS-TRAJECTORY-V1.0.json  pds3_GO-V-PWS-4-SUMM-VSA60S-V1.0.json  pds3_GO-X-RSS-1-ODR-V1.0.json  (+509 more)
src/pdsmcp/scripts/: build_catalog.py  build_metadata.py  validate_schema.py
tests/: test_validation.py  test_validation_integration.py
